# learning-diary

./: .coveragerc  .env  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  mypy.ini  pyproject.toml  tox.ini
core/: __init__.py  database.py  diary.py  main.py  models.py
core/models/: __init__.py  base.py  category.py  database.py  diary.py  note.py
core/schema/: __init__.py  category.py  diary.py  note.py  search.py
instance/: base_config.py  config.py  dev_config.py  dev_config.toml  test_config.py  test_config.toml
k8s/: app-configmap.yaml  app-deployment.yaml  postgres-deployment.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-storage.yaml
migrations/: env.py
migrations/versions/: 47454edab16c_.py  b91b24885e63_.py  e3184b347e6c_.py
tests/: conftest.py  models_factory.py
tests/models/: test_category_connector.py  test_database_connector.py
tests/schema/: test_category.py  test_category_mutation.py  test_diary.py  test_node.py
